--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
   width: 60px;
   height: 60px;
 }
+.slider__btn-prev:hover, .slider__btn-next:hover {
+  cursor: pointer;
+}
 button img{
   width: 50px;
 }
@@ -39,9 +42,7 @@ button img{
   right: 1%;
 }
 .slider__pagination {
-  /* width: 100px; */
   height: 50px;
-  /* border: black solid 2px; */
   display: flex;
   gap: 20px;
 }
@@ -50,6 +51,10 @@ button img{
   width: 50px;
   border-radius: 50%;
   border: 2px solid black;
+}
+.slider__dot:hover {
+  cursor: pointer;
+  background: rgb(250, 220, 163);
 }
 .active-dot {
   background: orange;
