--- a/style.css
+++ b/style.css
@@ -10,13 +10,19 @@
   background: lightgray;
   padding: 50px 0;
 }
-.slider__line {
-  display: flex;
-  width: 300px;
+.slider__wrapper {
+  /* display: flex; */
+  width: 400px;
+  /* height: 300px; */
   overflow: hidden;
 }
-.slider__line img {
-  width: 300px;
+.slider__line {
+  display: flex;
+ 
+}
+.slider__img {
+  width: 400px;
+  /* height: 300px; */
 }
 .slider__btn-prev, .slider__btn-next {
   width: 60px;
