--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@
 }
 .slider__btn-prev:hover, .slider__btn-next:hover {
   cursor: pointer;
+  border: solid orange 3px;
+  scale: 1.2;
 }
 button img{
   width: 50px;
@@ -47,7 +49,7 @@ button img{
 }
 .disabled{
   pointer-events: none;
-  filter: blur(2px);
+  filter: blur(3px) grayscale(100);
 }
 .slider__pagination {
   height: 50px;
@@ -63,6 +65,8 @@ button img{
 .slider__dot:hover {
   cursor: pointer;
   background: rgb(250, 220, 163);
+  border: solid lightgreen 2px;
+  scale: 1.2;
 }
 .active-dot {
   background: orange;
